--- a/src/main/resources/lk.ijse.global_flavour.view/admindashboard.fxml
+++ b/src/main/resources/lk.ijse.global_flavour.view/admindashboard.fxml
@@ -23,11 +23,11 @@
       </AnchorPane>
       <AnchorPane layoutX="-3.0" prefHeight="761.0" prefWidth="332.0" styleClass="adminDashBordLeftSlide" stylesheets="@../lk.ijse.global_flavour.styles/style.css" AnchorPane.bottomAnchor="1.0">
          <children>
-            <JFXButton fx:id="HomeBtn" layoutX="73.0" layoutY="206.0" onAction="#btnOnHome" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Home ">
+            <JFXButton fx:id="HomeBtn" layoutX="74.0" layoutY="206.0" onAction="#btnOnHome" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Home ">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font></JFXButton>
-            <JFXButton fx:id="EmpBtn" layoutX="73.0" layoutY="282.0" onAction="#btnOnEmployee" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Employee">
+            <JFXButton fx:id="EmpBtn" layoutX="74.0" layoutY="282.0" onAction="#btnOnEmployee" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Employee">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font></JFXButton>
@@ -66,17 +66,17 @@
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-log-out.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="SupBtn" layoutX="75.0" layoutY="358.0" onAction="#btnOnSuppliers" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Suppliers">
+            <JFXButton fx:id="SupBtn" layoutX="74.0" layoutY="358.0" onAction="#btnOnSuppliers" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Suppliers">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="ItmBtn" layoutX="75.0" layoutY="434.0" onAction="#btnOnItem" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Item">
+            <JFXButton fx:id="ItmBtn" layoutX="74.0" layoutY="434.0" onAction="#btnOnItem" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Item">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="OrderBtn" layoutX="73.0" layoutY="510.0" onAction="#btnOnOrder" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Order">
+            <JFXButton fx:id="OrderBtn" layoutX="74.0" layoutY="510.0" onAction="#btnOnOrder" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Order">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
@@ -124,12 +124,17 @@
                   </RadialGradient>
                </textFill>
             </Label>
-            <JFXButton fx:id="SalaryBtn1" layoutX="73.0" layoutY="586.0" onAction="#btnOnSalary" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Salary">
+            <JFXButton fx:id="SalaryBtn1" layoutX="74.0" layoutY="586.0" onAction="#btnOnSalary" prefHeight="44.0" prefWidth="183.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Salary">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
             <Button layoutX="269.0" layoutY="708.0" mnemonicParsing="false" onAction="#BackOnAction" opacity="0.0" prefHeight="24.0" prefWidth="33.0" />
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="25.0" layoutY="588.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+               <image>
+                  <Image url="@../lk.ijse.global_flavour.assets/icons8-stack-of-money-96.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
