--- a/src/main/resources/lk.ijse.global_flavour.view/changepassword.fxml
+++ b/src/main/resources/lk.ijse.global_flavour.view/changepassword.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="455.0" prefWidth="523.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.global_flavour.controller.ChangePasswordController">
+<AnchorPane fx:id="changePasswordAnchor" prefHeight="455.0" prefWidth="523.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.global_flavour.controller.ChangePasswordController">
    <children>
       <ImageView fitHeight="461.0" fitWidth="529.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -18,22 +19,7 @@
       <AnchorPane layoutX="38.0" layoutY="65.0" prefHeight="329.0" prefWidth="452.0" styleClass="loginPageleLeftSlide" stylesheets="@../lk.ijse.global_flavour.styles/style.css">
          <children>
             <Separator layoutX="50.0" layoutY="56.0" prefHeight="0.0" prefWidth="285.0" AnchorPane.bottomAnchor="271.0" />
-            <TextField fx:id="txtAdminCashiar" layoutX="64.0" layoutY="12.0" prefHeight="40.0" prefWidth="267.0" promptText="Admin/Cashiar" style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;" AnchorPane.leftAnchor="64.0" AnchorPane.topAnchor="12.0">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </TextField>
             <Separator layoutX="48.0" layoutY="120.0" prefHeight="0.0" prefWidth="285.0" AnchorPane.bottomAnchor="207.0" />
-            <TextField fx:id="txtEmail" layoutX="63.0" layoutY="76.0" prefHeight="40.0" prefWidth="267.0" promptText="email" style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="txtYouserName" layoutX="64.0" layoutY="142.0" prefHeight="40.0" prefWidth="267.0" promptText="Youser Name " style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </TextField>
             <TextField fx:id="txtPassword" layoutX="64.0" layoutY="208.0" prefHeight="44.0" prefWidth="285.0" promptText="Enter Your New Password" style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;">
                <font>
                   <Font name="System Bold" size="20.0" />
@@ -47,6 +33,21 @@
             <Separator layoutX="48.0" layoutY="185.0" prefHeight="0.0" prefWidth="285.0" />
             <Separator layoutX="47.0" layoutY="251.0" prefHeight="3.0" prefWidth="299.0" />
             <Separator layoutX="46.0" layoutY="315.0" prefHeight="3.0" prefWidth="299.0" />
+            <Label fx:id="lblAdminCashiar" layoutX="64.0" layoutY="12.0" prefHeight="44.0" prefWidth="267.0" style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;" text=" ">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblEmail" layoutX="64.0" layoutY="75.0" prefHeight="44.0" prefWidth="267.0" style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;" text=" ">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblName1" layoutX="64.0" layoutY="141.0" prefHeight="44.0" prefWidth="267.0" style="-fx-background-color: transperan; -fx-border-color: #0F0E0E; -fx-border-width: 0px 0px 0px 3px;" text=" ">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <Label layoutX="150.0" layoutY="22.0" prefHeight="14.0" prefWidth="228.0" text="Change Password" textFill="WHITE">
@@ -54,5 +55,15 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
+      <JFXButton layoutX="384.0" layoutY="406.0" onAction="#SaveOnAction" prefHeight="29.0" prefWidth="106.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="Save" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="38.0" layoutY="406.0" onAction="#CloseOnAction" prefHeight="29.0" prefWidth="106.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="Close" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
