--- a/src/main/resources/lk.ijse.global_flavour.view/fogotpassworld.fxml
+++ b/src/main/resources/lk.ijse.global_flavour.view/fogotpassworld.fxml
@@ -34,12 +34,12 @@
             <JFXButton fx:id="txtadd" layoutX="326.0" layoutY="237.0" onAction="#addOnAction" prefHeight="44.0" prefWidth="92.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: #0F0E0E;" text="add" />
          </children>
       </AnchorPane>
-      <JFXButton layoutX="399.0" layoutY="14.0" onAction="#buttonOnAction" prefHeight="44.0" prefWidth="92.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text=" back" textFill="#f5f5f5" />
-      <ImageView fitHeight="44.0" fitWidth="57.0" layoutX="346.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="44.0" fitWidth="57.0" layoutX="447.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../lk.ijse.global_flavour.assets/icons8-back-arrow-100.png" />
          </image>
       </ImageView>
+      <JFXButton layoutX="447.0" layoutY="14.0" onAction="#buttonOnAction" opacity="0.0" prefHeight="44.0" prefWidth="44.0" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text=" back" textFill="#f5f5f5" />
       <Hyperlink fx:id="txtChangePassword" layoutX="358.0" layoutY="408.0" onAction="#ChangePasswordOnAction" prefHeight="29.0" prefWidth="133.0" text="Change password" />
    </children>
 </AnchorPane>
