--- a/src/main/resources/lk.ijse.global_flavour.view/cashierdashboard.fxml
+++ b/src/main/resources/lk.ijse.global_flavour.view/cashierdashboard.fxml
@@ -23,32 +23,32 @@
       </AnchorPane>
       <AnchorPane layoutY="-3.0" prefHeight="761.0" prefWidth="332.0" styleClass="adminDashBordLeftSlide" stylesheets="@../lk.ijse.global_flavour.styles/style.css" AnchorPane.bottomAnchor="-3.0">
          <children>
-            <JFXButton fx:id="HomeBtn" layoutX="81.0" layoutY="230.0" onAction="#btnOnHome" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Home ">
+            <JFXButton fx:id="HomeBtn" layoutX="80.0" layoutY="221.0" onAction="#btnOnHome" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Home ">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="CustBtn" layoutX="81.0" layoutY="295.0" onAction="#btnOnCustom" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Customer">
+            <JFXButton fx:id="CustBtn" layoutX="80.0" layoutY="292.0" onAction="#btnOnCustom" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Customer">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="32.0" layoutY="221.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
                <image>
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-home-page-100.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="297.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="32.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
                <image>
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-employee-64.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="360.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="363.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
                <image>
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-wish-list-100.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="433.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
                <image>
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-order-64.png" />
                </image>
@@ -58,17 +58,17 @@
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-log-out.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="deliverBtn" layoutX="81.0" layoutY="565.0" onAction="#btnOnDeliver" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Delivery">
+            <JFXButton fx:id="deliverBtn" layoutX="80.0" layoutY="572.0" onAction="#btnOnDeliver" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Delivery">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="ItmBtn" layoutX="81.0" layoutY="358.0" onAction="#btnOnItem" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Item">
+            <JFXButton fx:id="ItmBtn" layoutX="80.0" layoutY="362.0" onAction="#btnOnItem" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Item">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="OrderBtn" layoutX="81.0" layoutY="428.0" onAction="#btnOnOrder" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Orders">
+            <JFXButton fx:id="OrderBtn" layoutX="80.0" layoutY="432.0" onAction="#btnOnOrder" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Orders">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
@@ -112,26 +112,31 @@
                </textFill>
             </Label>
             <Button layoutX="271.0" layoutY="709.0" mnemonicParsing="false" onAction="#BackOnAction" opacity="0.0" prefHeight="24.0" prefWidth="33.0" />
-            <JFXButton fx:id="vehicalBtn1" layoutX="81.0" layoutY="628.0" onAction="#btnOnVehical" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Vehicle">
+            <JFXButton fx:id="vehicalBtn1" layoutX="80.0" layoutY="642.0" onAction="#btnOnVehical" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Vehicle">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="567.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="573.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
                <image>
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-deliver-food-100.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="630.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="643.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
                <image>
                   <Image url="@../lk.ijse.global_flavour.assets/icons8-vehicles-64.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="BtnSupplierLoad" layoutX="81.0" layoutY="498.0" onAction="#SupplierLoadOnAction" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="New Supply Load">
+            <JFXButton fx:id="BtnSupplierLoad" layoutX="80.0" layoutY="502.0" onAction="#SupplierLoadOnAction" prefHeight="45.0" prefWidth="215.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="New Supply Load">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </JFXButton>
+            <ImageView fitHeight="45.0" fitWidth="41.0" layoutX="33.0" layoutY="502.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);">
+               <image>
+                  <Image url="@../lk.ijse.global_flavour.assets/icons8-supply-chain-100.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
