--- a/src/main/resources/lk.ijse.global_flavour.view/newsupplyload_form.fxml
+++ b/src/main/resources/lk.ijse.global_flavour.view/newsupplyload_form.fxml
@@ -29,7 +29,7 @@
       </TableView>
       <JFXButton fx:id="btnAddToLoad" layoutX="1109.0" layoutY="360.0" onAction="#btnaddcartOnAction" prefHeight="31.0" prefWidth="102.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Add to load" />
       <JFXComboBox fx:id="cmbsuppid" focusColor="WHITE" layoutX="228.0" layoutY="87.0" onAction="#cmbSuppIdOnAction" prefHeight="48.0" prefWidth="179.0" />
-      <Label layoutX="577.0" layoutY="25.0" prefHeight="43.0" prefWidth="271.0" text="NEW SUPPLY LOAD" textFill="WHITE">
+      <Label layoutX="534.0" layoutY="23.0" prefHeight="43.0" prefWidth="271.0" text="NEW SUPPLY LOAD" textFill="WHITE">
          <font>
             <Font size="29.0" />
          </font>
@@ -39,9 +39,9 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="133.0" layoutY="145.0" prefHeight="48.0" prefWidth="127.0" text="Supply Name:" textFill="WHITE">
+      <Label layoutX="133.0" layoutY="138.0" prefHeight="48.0" prefWidth="127.0" text="Supply Name:" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
       <JFXComboBox fx:id="cmbitemcode" focusColor="WHITE" layoutX="236.0" layoutY="194.0" onAction="#cmbitemcodeOnAction" prefHeight="48.0" prefWidth="179.0" />
@@ -50,39 +50,39 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="133.0" layoutY="242.0" prefHeight="48.0" prefWidth="110.0" text="Item Name:" textFill="WHITE">
+      <Label layoutX="133.0" layoutY="256.0" prefHeight="31.0" prefWidth="110.0" text="Item Name:" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="133.0" layoutY="290.0" prefHeight="48.0" prefWidth="110.0" text="Category:" textFill="WHITE">
+      <Label layoutX="133.0" layoutY="288.0" prefHeight="48.0" prefWidth="110.0" text="Category:" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="133.0" layoutY="338.0" prefHeight="48.0" prefWidth="179.0" text="Quantity On Hands:" textFill="WHITE">
+      <Label layoutX="133.0" layoutY="329.0" prefHeight="48.0" prefWidth="179.0" text="Quantity On Hands:" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="lblchangingitmname" layoutX="243.0" layoutY="246.0" prefHeight="43.0" prefWidth="194.0" textFill="#ffcaca">
+      <Label fx:id="lblchangingitmname" layoutX="228.0" layoutY="256.0" prefHeight="31.0" prefWidth="194.0" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="lblchangingsuppname" layoutX="262.0" layoutY="148.0" prefHeight="43.0" prefWidth="194.0" textFill="#ffcaca">
+      <Label fx:id="lblchangingsuppname" layoutX="245.0" layoutY="146.0" prefHeight="31.0" prefWidth="194.0" textFill="#f8f8f8">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="lblchangingcategory" layoutX="224.0" layoutY="293.0" prefHeight="43.0" prefWidth="194.0" textFill="#ffcaca">
+      <Label fx:id="lblchangingcategory" layoutX="212.0" layoutY="296.0" prefHeight="31.0" prefWidth="194.0" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="lblchangingqtyonhands" layoutX="314.0" layoutY="340.0" prefHeight="43.0" prefWidth="161.0" textFill="#ffcaca">
+      <Label fx:id="lblchangingqtyonhands" layoutX="288.0" layoutY="337.0" prefHeight="31.0" prefWidth="161.0" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="17.0" />
          </font>
       </Label>
       <Label layoutX="546.0" layoutY="80.0" prefHeight="48.0" prefWidth="140.0" text="Supply Load Id:" textFill="WHITE">
@@ -100,7 +100,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="lblsupplydate" layoutX="600.0" layoutY="163.0" prefHeight="43.0" prefWidth="194.0" textFill="#ffcaca">
+      <Label fx:id="lblsupplydate" layoutX="600.0" layoutY="163.0" prefHeight="43.0" prefWidth="194.0" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
@@ -110,7 +110,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="lblsupplytime" layoutX="601.0" layoutY="237.0" prefHeight="43.0" prefWidth="194.0" textFill="#ffcaca">
+      <Label fx:id="lblsupplytime" layoutX="601.0" layoutY="237.0" prefHeight="43.0" prefWidth="194.0" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
@@ -135,13 +135,18 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="txttotalprice" focusColor="WHITE" labelFloat="true" layoutX="561.0" layoutY="699.0" onMouseClicked="#txttotalpriceOnMouseClicked" prefHeight="30.0" prefWidth="142.0" styleClass="EmloyeeTxtColour" stylesheets="@../lk.ijse.global_flavour.styles/style.css" unFocusColor="WHITE">
+      <JFXTextField fx:id="txttotalprice" focusColor="WHITE" labelFloat="true" layoutX="270.0" layoutY="704.0" onMouseClicked="#txttotalpriceOnMouseClicked" prefHeight="44.0" prefWidth="82.0" styleClass="EmloyeeTxtColour" stylesheets="@../lk.ijse.global_flavour.styles/style.css" unFocusColor="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </JFXTextField>
-      <JFXButton fx:id="btnAddToLoad1" layoutX="755.0" layoutY="709.0" onAction="#btnplaceorderOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Add Supply laod" />
-      <Label layoutX="424.0" layoutY="696.0" prefHeight="48.0" prefWidth="140.0" text="Load Payment:" textFill="WHITE">
+      <JFXButton fx:id="btnAddToLoad1" layoutX="1079.0" layoutY="710.0" onAction="#btnplaceorderOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-radius: 15; -fx-background-color: white; -fx-effect: dropshadow(three-pass-box, rgba(10,10,10,0.6), 10, 0, 0, 10);" text="Add Supply laod" />
+      <Label layoutX="133.0" layoutY="701.0" prefHeight="48.0" prefWidth="140.0" text="Load Payment:" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="352.0" layoutY="702.0" prefHeight="48.0" prefWidth="36.0" text=".00" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
